Made refactoring